--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@ rel="stylesheet"
 	                </p>
                 </div>
                 <h3 class="heading"><a href="#">Création de site</a></h3>
-                <p>Vous offre une solution complète pour établir une présence en ligne forte et professionnelle pour votre entreprise ou votre projet. Avec une équipe experte en développement web et design, nous travaillons en étroite collaboration avec vous pour créer un site web sur mesure qui répond parfaitement à vos besoins spécifiques.
+                <p >Vous offre une solution complète pour établir une présence en ligne forte et professionnelle pour votre entreprise ou votre projet. Avec une équipe experte en développement web et design, nous travaillons en étroite collaboration avec vous pour créer un site web sur mesure qui répond parfaitement à vos besoins spécifiques.
 
 					Que vous ayez besoin d'un site vitrine, d'une boutique en ligne ou d'une plateforme plus complexe, nous avons l'expertise pour réaliser votre projet. Nous nous engageons à vous fournir un site web esthétique, convivial, fonctionnel et optimisé pour les moteurs de recherche, assurant ainsi une expérience utilisateur optimale pour vos visiteurs.
 					
@@ -828,7 +828,7 @@ rel="stylesheet"
 	                </p>
                 </div>
                 <h3 class="heading"><a href="#">Référencement SEO</a></h3>
-                <p>Vous offre une solution complète pour établir une présence en ligne forte et professionnelle pour votre entreprise ou votre projet. Avec une équipe experte en développement web et design, nous travaillons en étroite collaboration avec vous pour créer un site web sur mesure qui répond parfaitement à vos besoins spécifiques. Que vous ayez besoin d'un site vitrine, d'une boutique en ligne ou d'une plateforme plus complexe, nous avons l'expertise pour réaliser votre projet. Nous nous engageons à vous fournir un site web esthétique, convivial, fonctionnel et optimisé pour les moteurs de recherche, assurant ainsi une expérience utilisateur optimale pour vos visiteurs.</div>
+                <p style="color:#ffffff">Vous offre une solution complète pour établir une présence en ligne forte et professionnelle pour votre entreprise ou votre projet. Avec une équipe experte en développement web et design, nous travaillons en étroite collaboration avec vous pour créer un site web sur mesure qui répond parfaitement à vos besoins spécifiques. Que vous ayez besoin d'un site vitrine, d'une boutique en ligne ou d'une plateforme plus complexe, nous avons l'expertise pour réaliser votre projet. Nous nous engageons à vous fournir un site web esthétique, convivial, fonctionnel et optimisé pour les moteurs de recherche, assurant ainsi une expérience utilisateur optimale pour vos visiteurs.</div>
             </div>
           </div>
           <div class="col-md-4 d-flex ftco-animate">
