--- a/index.html
+++ b/index.html
@@ -692,6 +692,7 @@ rel="stylesheet"
           </div>
         </div>
     		<div class="row">
+				<a href="https://legumesjahiz.ma/">
     			<div class="col-md-4">
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/1.png);">
     					<div class="overlay"></div>
@@ -701,6 +702,8 @@ rel="stylesheet"
 	    				</div>
     				</div>
   				</div>
+			</a>
+			<a href="https://www.nettoyage-casablanca-maroc.com/">
 				  <div class="col-md-4">
     				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/5.png);">
     					<div class="overlay"></div>
@@ -710,6 +713,7 @@ rel="stylesheet"
 	    				</div>
     				</div>
   				</div>
+			</a>
 				  <div class="col-md-4">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center">
 						<iframe width="100%" height="300" src="https://www.youtube.com/embed/VwgXoOWZlA4?si=PqL1tUKxRsAWvJoN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen ></iframe>
