--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@ rel="stylesheet"
   <body class="bodyn" data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 	  
 	  
+
+	<!-- Navbar -->
+
+  <!-- Navbar -->
+
+
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 	    <div class="container">
 	      <a class="navbar-brand" href="index.html"> <img src="images/logo.png" alt="" width="100px"; height="40px">
@@ -58,8 +64,8 @@ rel="stylesheet"
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
 
-	      <div class="collapse navbar-collapse" id="ftco-nav">
-			<ul class="navbar-nav nav ml-auto">
+	      <div class="collapse navbar-collapse dropdown" id="ftco-nav">
+			<ul class="navbar-nav nav ml-auto dropdown-menu">
 			<li class="nav-item"><a href="#home-section" class="nav-link"><span>Accueil</span></a></li>
 			<li class="nav-item"><a href="#about-section" class="nav-link"><span>À propos</span></a></li>
 			<li class="nav-item"><a href="#resume-section" class="nav-link"><span>CV</span></a></li>
@@ -71,7 +77,7 @@ rel="stylesheet"
 			</ul>
 			</div>
 	    </div>
-	  </nav>
+	  </nav>  
 	<section id="home-section" class="hero">
 		  <div class="home-slider  owl-carousel">
 	      <div class="slider-item ">
@@ -1083,6 +1089,7 @@ rel="stylesheet"
   <script src="js/jquery.animateNumber.min.js"></script>
   <script src="js/scrollax.min.js"></script>
   
+
   <script src="js/main.js"></script>
   <!-- MDB -->
 <script
