--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@ rel="stylesheet"
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
 
-	      <div class="collapse navbar-collapse dropdown" id="ftco-nav">
-			<ul class="navbar-nav nav ml-auto dropdown-menu">
+	      <div class="collapse navbar-collapse " id="ftco-nav">
+			<ul class="navbar-nav nav ml-auto ">
 			<li class="nav-item"><a href="#home-section" class="nav-link"><span>Accueil</span></a></li>
 			<li class="nav-item"><a href="#about-section" class="nav-link"><span>À propos</span></a></li>
 			<li class="nav-item"><a href="#resume-section" class="nav-link"><span>CV</span></a></li>
