--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
+  <meta name="copyright" content="https://portfolio-nasr-najat.vercel.app/">
+  
+  <title>Développeur Full Stack: Création de sites,
+	Application Web,
+	Site E-Commerce,
+	Référencement SEO,
+	Hébergement Web</title>
+  <meta name="Description" content="Développeur web compétent dans la création de sites web innovants et les stratégies SEO avancées ? Je suis Najat Nasr, Développeur Full-stack professionnel avec plus d'un an d'expérience.
+  Je suis actif dans ce domaine depuis plus de 4 ans et j'ai travaillé sur divers projets.
+  
+  je me démarque en tant qu'expert en développement web et SEO . Spécialisé dans la conception de sites web avec WordPress ou React Js , Java spring Boot , PHP ... sur mesure, je m'engage à offrir une présence digitale optimale à mes clients. Que ce soit pour un site vitrine, une boutique en ligne ou une application web, j'applique les meilleures pratiques pour garantir une expérience utilisateur exceptionnelle et une visibilité maximale sur les moteurs de recherche. Collaborer avec moi signifie choisir un partenaire fiable pour propulser votre projet web  et au-delà vers de nouveaux sommets.<br>
+
+  Mes services  :
+  Création de sites
+  Application Web
+  Site E-Commerce
+  Référencement SEO
+  Hébergement Web
+ ">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
     <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
