--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ rel="stylesheet"
 				<span class="number" data-number="120">0</span>
 				<span>Projet terminé</span>
 								</p>
-								<p><a href="#" class="btn btn-primary py-3 px-3">Télécharger le CV</a></p>
+								<button class="btn btn-primary py-4 px-5" id="btnTelechargerPDF">Télécharger CV</button>
 							  </div>
 				</div>
 				</div>
@@ -387,7 +387,9 @@ rel="stylesheet"
     	
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="#" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<!-- <p><a href="#" class="btn btn-primary py-4 px-5">Télécharger  CV</a></p> -->
+					<button class="btn btn-primary py-4 px-5" id="btnTelechargerPDF">Télécharger CV</button>
+
     			</div>
     		</div>
     	</div>
