--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ rel="stylesheet"
 				<li class="d-flex"><span>Date de naissance :</span> <span>1er janvier 1987</span></li>
 				<li class="d-flex"><span>Adresse :</span> <span>San Francisco CA 97987 États-Unis</span></li>
 				<li class="d-flex"><span>Code postal :</span> <span>1000</span></li> -->
-				<li class="d-flex"><span>E-mail :</span> <span>digitaledev@gmail.com</span></li>
+				<li class="d-flex"><span>E-mail :</span> <span>nasrnajat01@gmail.com</span></li>
 				<li class="d-flex"><span>Téléphone : </span> <span>+212 645-727393</span></li>
 				</ul>
 				</div>
@@ -1022,7 +1022,7 @@ rel="stylesheet"
 								<span class="icon-paper-plane"></span>
 							</div>
 							<h3 class="mb-4">Adresse e-mail</h3>
-							<p><a href="mailto:digitaledev@gmail.com">digitaledev@gmail.com</a></p>
+							<p><a href="mailto:nasrnajat01@gmail.com">nasrnajat01@gmail.com</a></p>
 						</div>
 					</div>
 					<div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -1111,7 +1111,7 @@ rel="stylesheet"
 							<ul>
 								<!-- <li><span class="icon icon-map-marker"></span><span class="text"></span></li> -->
 								<li><a href="#"><span class="icon icon-phone"></span><span class="text">+212 645-727393</span></a></li>
-								<li><a href="#"><span class="icon icon-envelope"></span><span class="text">digitaledev@gmail.com</span></a></li>
+								<li><a href="#"><span class="icon icon-envelope"></span><span class="text">nasrnajat01@gmail.com</span></a></li>
 							</ul>
 						</div>
 					</div>
