Mise à jour du112

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </p>
             <div class="flex gap-4 justify-center mb-8">
                 <a href="tel:+212645727393" class="flex items-center gap-2 bg-blue-600 hover:bg-blue-700 px-6 py-3 rounded-lg transition">
-                    📧 Contact
+                    📞 Contact
                 </a>
             </div>
             <div class="animate-bounce text-slate-400 text-4xl">
