Mise à jour du1122

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Développeur Full Stack</title>
+    <meta name="google-site-verification" content="VLgh20nHseKijiZI07S16L1OCy_OkfWsefSGJIxIMVo" />
+<title>Développeur Full Stack Freelance Maroc | Portfolio Web</title>
+   <meta name="description" content="Portfolio de Najat Nasr, Développeur Full Stack freelance au Maroc. Expert en WordPress, React, Node.js et création de sites web modernes et performants.">
+    <meta name="keywords" content="Développeur Full Stack Maroc, Freelance Web, Création site WordPress, Développeur React, Node.js, Portfolio développeur, Casablanca">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @keyframes bounce {
